[package]
name = "github-summarize-issue-here"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
github-flows = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
flowsnet-platform-sdk = "0.1"
openai-flows = "0.8.5"
log = "0.4"
tiktoken-rs = "0.5.1"
chrono = "0.4.26"
